--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" 
+      <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="main">
+      <p id="add">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="current">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -41,7 +41,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
