--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="main">
       <p id="add">
         <label for="new-task">Add Item</label>
-        <div class="wrapper">
+        <div class="wrap">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="current">
+      <ul id="todo">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -41,7 +41,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed">
+      <ul id="done">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
