--- a/index.html
+++ b/index.html
@@ -6,53 +6,57 @@
     <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add">
+    </header>
+    <main class="main">
+      <section id="add">
         <label for="new-task">Add Item</label>
         <div class="wrap">
           <input id="new-task" class="task" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="todo">
-        <li class="todo-item">
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li class="todo-item edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="btn edit">Save</button>
-          <button class="btn delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="done">
-        <li class="done-item">
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section class="todo">
+        <h3>Todo</h3>
+        <ul id="todo">
+          <li class="todo-item">
+            <input type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img src="./remove.svg">
+            </button>
+          </li>
+          <li class="todo-item edit-mode">
+            <input type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task">
+            <button class="btn edit">Save</button>
+            <button class="btn delete">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="comlete">
+        <h3>Completed</h3>
+        <ul id="done">
+          <li class="done-item">
+            <input type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
