--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="img-matrix">
       <a class="more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
@@ -28,7 +28,7 @@
             <input type="text" class="task">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="img-remove">
             </button>
           </li>
           <li class="todo-item edit-mode">
@@ -37,7 +37,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="btn edit">Save</button>
             <button class="btn delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="img-remove">
             </button>
           </li>
         </ul>
@@ -51,7 +51,7 @@
             <input type="text" class="task">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="img-remove">
             </button>
           </li>
         </ul>
