--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="add">
+      <section id="add" class="add">
         <label for="new-task">Add Item</label>
         <div class="wrap">
-          <input id="new-task" class="task" type="text">
+          <input id="new-task" class="add__task task" type="text">
           <button class="btn">Add</button>
         </div>
       </section>
-      <section class="todo">
+      <section class="todos">
         <h3>Todo</h3>
-        <ul id="todo">
-          <li class="todo-item">
+        <ul id="todo" class="todo">
+          <li class="todo__todo-item">
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
@@ -31,7 +31,7 @@
               <img src="./remove.svg" alt="img-remove">
             </button>
           </li>
-          <li class="todo-item edit-mode">
+          <li class="todo__todo-item edit-mode">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
@@ -42,10 +42,10 @@
           </li>
         </ul>
       </section>
-      <section class="comlete">
+      <section class="complete">
         <h3>Completed</h3>
-        <ul id="done">
-          <li class="done-item">
+        <ul id="done"  class="done">
+          <li class="done__done-item">
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
