refactor: adjust BEM-notation  according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -13,45 +13,45 @@
     </header>
     <main class="main">
       <section id="add" class="add">
-        <label for="new-task">Add Item</label>
-        <div class="wrap">
-          <input id="new-task" class="add__task task" type="text">
-          <button class="btn">Add</button>
+        <label class="add__label" for="new-task">Add Item</label>
+        <div class="add__new-task wrap">
+          <input id="new-task" class="new-task__input task" type="text">
+          <button class="new-task__btn btn">Add</button>
         </div>
       </section>
       <section class="todos">
-        <h3>Todo</h3>
-        <ul id="todo" class="todo">
-          <li class="todo__todo-item">
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img src="./remove.svg" alt="img-remove">
+        <h3 class="todos__title">Todo</h3>
+        <ul id="todo" class="todos__list todo">
+          <li class="list__item">
+            <input class="item__check" type="checkbox">
+            <label class="item__label task">Pay Bills</label>
+            <input class="item__text task" type="text">
+            <button class="item__btn btn edit">Edit</button>
+            <button class="item__btn btn delete">
+              <img class="delete__img" src="./remove.svg" alt="img-remove">
             </button>
           </li>
-          <li class="todo__todo-item edit-mode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="btn edit">Save</button>
-            <button class="btn delete">
-              <img src="./remove.svg" alt="img-remove">
+          <li class="list__item edit-mode">
+            <input class="item__check" type="checkbox">
+            <label class="item__label task">Go Shopping</label>
+            <input class="item__text task" type="text" value="Go Shopping">
+            <button class="item__btn btn edit">Save</button>
+            <button class="item__btn btn delete">
+              <img class="delete__img" src="./remove.svg" alt="img-remove">
             </button>
           </li>
         </ul>
       </section>
       <section class="complete">
-        <h3>Completed</h3>
-        <ul id="done"  class="done">
-          <li class="done__done-item">
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete">
-              <img src="./remove.svg" alt="img-remove">
+        <h3 class="complete__title">Completed</h3>
+        <ul id="done" class="complete__list done">
+          <li class="list__item">
+            <input class="item__check" type="checkbox" checked>
+            <label class="item__label task">See the Doctor</label>
+            <input class="item__text task" type="text">
+            <button class="item__btn btn edit">Edit</button>
+            <button class="item__btn btn delete">
+              <img class="delete__img" src="./remove.svg" alt="img-remove">
             </button>
           </li>
         </ul>
